fixed icons alignments with media queries

--- a/app/assets/stylesheets/components/_section.scss
+++ b/app/assets/stylesheets/components/_section.scss
@@ -1,5 +1,6 @@
 .info-what {
 	background-color: $white-bg;
+	text-align: center !important;
 	h1 {
 		font-family: $headers;
 		color: $blue-main;
@@ -7,6 +8,14 @@
 		font-size: 2em;
 	}
 }
+
+@media screen and (min-width: 1080px) {
+	.row {
+		margin-left: 13rem;
+		max-width: 100%;
+	}
+}
+
 .info-learn {
 	background-color: $blue-main;
 	font-family: $body; 
@@ -35,5 +44,6 @@
 .info-icons {
 	font-family: $body;
 	color: $light-font;
+	margin: 20px 20px 20px 20px;
 	// box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 }
